# pkg-manager

./: CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  commands.rs  error.rs  lib.rs  models.rs
src-tauri/src/adapters/: apt.rs  brew.rs  cargo.rs  chocolatey.rs  conda.rs  dnf.rs  flatpak.rs  mas.rs  mod.rs  nix.rs  npm.rs  pacman.rs  pip.rs  scoop.rs  snap.rs  winget.rs
src/lib/: test-setup.ts
src/lib/components/: AppUpdater.svelte  CommandPalette.svelte  ConfirmDialog.svelte  DetailPanel.svelte  EmptyState.svelte  ErrorBoundary.svelte  Icons.svelte  KeyboardHandler.svelte  LoadingSkeleton.svelte  ManagerMenu.svelte  PackageIcon.svelte  PackageInfoModal.svelte  PackageList.svelte  PreferencesModal.svelte  SearchBar.svelte  Sidebar.svelte  Toast.svelte
src/lib/components/views/: AppsView.svelte  BrowseView.svelte  CleanupView.svelte  DashboardView.svelte  DebloatView.svelte  ExportImportView.svelte  (+7 more)
src/lib/stores/: autoupdate.svelte.ts  history.svelte.ts  packages.svelte.ts  pinned.svelte.ts  state.svelte.ts  tasks.svelte.test.ts  tasks.svelte.ts  theme.svelte.ts  toast.svelte.test.ts  toast.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: commands.test.ts  commands.ts  icons.ts  logger.test.ts  logger.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
tests/e2e/: navigation.spec.ts  theme.spec.ts
