[package]
name = "app"
version = "0.2.3"
description = "Cross-platform package manager GUI"
authors = ["stef-the"]
license = "MIT"
repository = "https://github.com/stef-the/pkg-manager"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
hostname = "0.4"
tokio = { version = "1", features = ["rt"] }
